dataset1235/2025-2/2318198438/users/1018361269/executions/2601575092_3940197836.log
== RUN (2025-08-22 15:22:47)
-- CODE: 
aresta =5
area = (3**0.5)*3/2*aresta**2
 
print(round(area, 4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
64.9519
---- user output:
64.9519
-- TEST CASE 2:
---- input:
xx
---- correct output:
64.9519
---- user output:
64.9519
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-22 15:21:13)
-- CODE: 
aresta =5
area = ((3*3**0.5)//2)*aresta**2
 
print(round(area, 4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
64.9519
---- user output:
50.0
-- TEST CASE 2:
---- input:
xx
---- correct output:
64.9519
---- user output:
50.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-22 15:21:14)
-- CODE: 
aresta =5
area = ((3*3**0.5)//2)*aresta**2
 
print(round(area, 4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
64.9519
---- user output:
50.0
-- TEST CASE 2:
---- input:
xx
---- correct output:
64.9519
---- user output:
50.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-22 15:21:39)
-- CODE: 
aresta =5
area = (3*(3**0.5)//2)*aresta**2
 
print(round(area, 4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
64.9519
---- user output:
50.0
-- TEST CASE 2:
---- input:
xx
---- correct output:
64.9519
---- user output:
50.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-22 15:22:54)
-- CODE: 
aresta =5
area = (3**0.5)*3/2*aresta**2
 
print(round(area, 4))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
64.9519
---- user output:
64.9519
-- TEST CASE 2:
---- input:
xx
---- correct output:
64.9519
---- user output:
64.9519
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-22 15:21:40)
-- CODE: 
aresta =5
area = (3*(3**0.5)//2)*aresta**2
 
print(round(area, 4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
64.9519
---- user output:
50.0
-- TEST CASE 2:
---- input:
xx
---- correct output:
64.9519
---- user output:
50.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-22 15:21:40)
-- CODE: 
aresta =5
area = (3*(3**0.5)//2)*aresta**2
 
print(round(area, 4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
64.9519
---- user output:
50.0
-- TEST CASE 2:
---- input:
xx
---- correct output:
64.9519
---- user output:
50.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-22 15:21:54)
-- CODE: 
aresta =5
area = (3**0.5)*3//2)*aresta**2
 
print(round(area, 4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
64.9519
-- ERROR:
File "XXXX", line 2
    area = (3**0.5)*3//2)*aresta**2
                        ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
xx
---- correct output:
64.9519
-- ERROR:
File "XXXX", line 2
    area = (3**0.5)*3//2)*aresta**2
                        ^
SyntaxError: unmatched ')'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-22 15:20:47)
-- CODE: 
aresta =5
area = (3*3**1/2//2)*aresta**2
 
print(round(area, 4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
64.9519
---- user output:
50.0
-- TEST CASE 2:
---- input:
xx
---- correct output:
64.9519
---- user output:
50.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
